--- a/templates/landing.html
+++ b/templates/landing.html
@@ -9,9 +9,9 @@
         <div class="container" id="centering">
         <!-- Page contents -->
             <div id="welcome-container" style="height: 500px; display: flex; flex-direction: column; justify-content: center; align-items: center;">
-                <div id="welcome-text" class="hidden header">
-                    <h1 class="highlight" style="font-size: 150px; font-family: helvetica; font-weight: 900;">wizlink</h1>
-                    <p>take learning beyond the textbook.</p>
+                <div id="welcome-text" class="hidden">
+                    <h1 class="highlight neon" style="font-size: 150px; font-family: helvetica; font-weight: 900; color: white;">wizlink</h1>
+                    <p style="color: white">take learning beyond the textbook.</p>
                 </div>
             </div>
         
@@ -40,6 +40,10 @@
                     animation: fadeIn 4s forwards;
                 }
             
+                .neon{
+                    text-shadow: 5px 20px 50px #FFFFFFAA, -5px 20px 50px #87CEEBAA;
+                }
+
                 @keyframes fadeIn {
                     0% {
                         opacity: 0;
@@ -124,7 +128,7 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
-                background: linear-gradient(-45deg, #87CEEB, white);
+                background: linear-gradient(-45deg, #87CEEB, #405E79);
                 animation: gradient 5s ease infinite;
                 z-index: -1;
             }
@@ -197,4 +201,3 @@
     </div>
 </div>
 {% endblock %}
-
