--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,9 +10,7 @@
         <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
         <script crossorigin="anonymous" src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"></script>
 
-        <!-- TODO: add icon -->
-        <link href="static/logo.png" rel="icon">
-
+        <link href="static/wizlink.png" rel="icon">
         <link href="/static/styles.css" rel="stylesheet">
 
         <title>ExpertRadar: {% block title %}{% endblock %}</title>
@@ -26,7 +24,7 @@
         <div class="container d-flex justify-content-between">
           <div>
             <a class="navbar-brand" href="/">
-              <img src="static/home.png" class="img-fluid nav-icon" style="width: 40%; height:40%"></a>
+              <img src="static/wizlink.png" class="img-fluid nav-icon" style="width: 10%; height:10%"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
