--- a/templates/awards.html
+++ b/templates/awards.html
@@ -134,7 +134,6 @@
         ],
         borderWidth: 0,
         barPercentage: '0.3',
-        borderSkipped: 'right',
         borderRadius: 20
       },{
         label: 'Points goal',
@@ -206,5 +205,6 @@
     img {
         height: 150px;
     }
+</style>
 
 {% endblock %}
