--- a/templates/guides.html
+++ b/templates/guides.html
@@ -7,7 +7,7 @@
 {% block main %}
 <div class="header">
     <h1>
-        <b>points leaderboard</b>
+        <b>guides</b>
     </h1>
     <p>read about findings and insights from sessions in guides.</p>
 </div>
