--- a/templates/room_list.html
+++ b/templates/room_list.html
@@ -18,11 +18,11 @@
 
     <div class="box_s" id="box">
       <form id="room-name-form" method="post" action="/">
-          <input name="room-name-input" id="room-name-input" class="input-group-text mx-auto p-2" placeholder="Create or join room">
+          <input name="room-name-input" id="room-name-input" class="input-group-text mx-auto p-2" placeholder="create or join session">
           <br>
-          <input name="username" id="username" class="input-group-text mx-auto p-2" placeholder="Username">
+          <input name="username" id="username" class="input-group-text mx-auto p-2" placeholder="username">
           <br>
-          <button type="submit" class="button_s">Join Room</button>
+          <button type="submit" class="button_s">join session</button>
       </form>
     </div>
 
@@ -40,6 +40,12 @@
     </div>
 </div>
 <script src="static/main.js"></script>
+
+<style>
+    .bg-info {
+        color: #405E79;
+    }
+</style>
 
 <div class="box_s" id="myTableDiv" >
     <table id="myTable" class="table table-borderless" style="color: #405E79">
