fixed logo bug in posts page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,7 @@
         <div class="container d-flex justify-content-between">
           <div>
             <a class="navbar-brand" href="/">
-              <img src="static/wizlink.png" class="img-fluid nav-icon" style="width: 10%; height:10%"></a>
+              <img src="{{ url_for('static', filename='/wizlink.png') }}" class="img-fluid nav-icon" style="width: 10%; height:10%"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
