final commit for v1.0.0

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -107,15 +107,31 @@
                     </div>
                 </div>
                 <div class="container" id="join-us">
-                    <h2>
-                        Join Us
-                    </h2>
+                    <h1 class="header">
+                        join us
+                    </h1>
                     <p>
                         Beyond the evident advantages of learning from experts, our platform strives to uncover the lesser-known benefits that emerge from engaging with seasoned professionals. By providing a unique opportunity to access specialized knowledge, learners can enhance their cognitive processing, develop critical thinking skills, and benefit from emotional and motivational gains. Collaborative learning environments fostered by our expert-guided sessions promote social interaction, while practical insights offered by experts lead to enhanced real-world application. Through our platform, users can tap into the hidden advantages of learning from experts, empowering themselves with long-term skill retention, broadened horizons, and the potential to challenge stereotypes. Discover the untapped potential of expert-guided learning and embark on a journey of comprehensive personal and professional growth with our cutting-edge knowledge exchange platform.                    </p>
                 </div>
                 <div class="d-sm-flex box_s" style="margin-left: 0; margin-right: 0; border-radius: 0px;">
-                    <a class="button_s" href="/register" style="margin-left:auto; margin-right: 10px;">register</a>
-                    <a class="button_s" href="/login" style="margin-right:auto; margin-left: 10px">log in</a>
+                    <div class="col-6" style="padding-left:60px; padding-right:60px;">
+                        <h1 class="header">
+                            our mission
+                        </h1>
+                        <p>
+                            Our mission is to provide a platform for learners to connect with experts and gain access to specialized knowledge. We aim to empower learners with the tools to enhance their learning experience and broaden their horizons. By facilitating the exchange of knowledge between experts and learners, we hope to foster a collaborative learning environment that promotes growth. 
+                        </p>
+                    </div>
+                    <div class="col-6" style="padding-right:60px;">
+                        <h1 class="header", style="padding: auto;">
+                            about us
+                        </h1>
+                        <p>
+                            We are a duo of high school students passionate about education and technology based in Bangkok, Thailand. We believe that learning is a lifelong process and that everyone has something to learn and something to teach. Connect with us!
+                        </p>
+                            <a class="button_s" href="https://perakasem.crd.co" style="margin-right: 10px;">Pera Kasemsripitak</a>
+                            <a class="button_s" href="https://instagram.com/yes.its_ryan">Ryan Maudgalya</a>
+                    </div>
                 </div> 
                 <div class="container">
                     <p>
