--- a/templates/publish.html
+++ b/templates/publish.html
@@ -14,10 +14,10 @@
 <div class="box_s" style="width: 100cap;">
     <form action="/publish" method="post">
         <div class="mb-3 mt-3">
-            <input autocomplete="off" autofocus class="form-control" id="title" name="title" placeholder="Topic" type="text" required>
+            <input autocomplete="off" autofocus class="form-control" id="title" name="title" placeholder="topic" type="text" required>
         </div>
         <div class="mb-3">
-            <textarea class="form-control" id="content" name="content" rows="10" placeholder="Start typing here..." required></textarea>
+            <textarea class="form-control" style="margin: auto;" id="content" name="content" rows="10"" required></textarea>
         </div>
         <div class="text-left">
             <button class="button_s" type="submit">post</button>
